<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tars</name>
  <version>0.0.0</version>
  <description>TARS: Another Robot Simulator for ROS2 Humble Hawksbill</description>
  <maintainer email="15214548+Ignacio-Perez@users.noreply.github.com">Ignacio Perez-Hurtado</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
